# wman

./: README.md  output.txt  read.cpp  save-data.py
hall-read/: hall-read.ino
read-send/: read-send.ino
serial/tserial/: tserial.ino
sim/: CMakeLists.txt  package.xml  wman.launch
sim/src/: dmc.cpp  hydro1.cpp  hydro2.cpp  hydro3.cpp  hydro4.cpp  hydro5.cpp  hydrometer.cpp  talker.cpp
snippets/transceiver/receiver/: receiver.ino
snippets/transceiver/transmietter/: transmietter.ino
transceiver/receiver/: receiver.ino
transceiver/transmietter/: transmietter.ino
